@@ -3695,6 +3695,8 @@ session_settings
 		bool disable_hash_check;
 
 		int max_suggest_pieces;
+
+		bool drop_skipped_requests;
 	};
 
 ``user_agent`` this is the client identification to the tracker.
@@ -4123,6 +4125,16 @@ bittorrent clients.
 ``max_suggest_pieces`` is the max number of suggested piece indices received
 from a peer that's remembered. If a peer floods suggest messages, this limit
 prevents libtorrent from using too much RAM. It defaults to 10.
+
+If ``drop_skipped_requests`` is set to true (it defaults to false), piece
+requests that have been skipped enough times when piece messages
+are received, will be considered lost. Requests are considered skipped
+when the returned piece messages are re-ordered compared to the order
+of the requests. This was an attempt to get out of dead-locks caused by
+BitComet peers silently ignoring some requests. It may cause problems
+at high rates, and high level of reordering in the uploading peer, that's
+why it's disabled by default.
+
 
 pe_settings
 ===========
